# agents-md-spec

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md
.github/workflows/: ci-py.yml  ci-ts.yml
cli/: README.md  package.json  tsconfig.json
cli/src/: cli.ts  info.ts  init.ts  lint.ts  parser.ts  validate.ts
docs/: adoption-guide.md  for-agent-developers.md  spec-guide.md  w3c-community-group-charter.md
integration-prs/: autogen-pr.md  crewai-pr.md  langchain-pr.md  openai-agents-pr.md  vercel-ai-pr.md
parsers/python/: pyproject.toml
parsers/python/src/agents_md/: __init__.py  fetcher.py  parser.py  types.py  validator.py
parsers/python/tests/: test_fetcher.py  test_parser.py  test_validator.py
parsers/typescript/: package.json  tsconfig.json  vitest.config.ts
parsers/typescript/src/: fetcher.ts  index.ts  parser.ts  types.ts  validator.ts
parsers/typescript/tests/: fetcher.test.ts  parser.test.ts  validator.test.ts
registry/: README.md  schema.json
spec/: AGENTS-MD-SPEC-001.md  agents.schema.json
spec/examples/: blog.agents.md  e-commerce.agents.md  enterprise-saas.agents.md  government.agents.md  healthcare.agents.md  minimal.agents.md
vscode-extension/: package.json
vscode-extension/src/: extension.ts
