[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-md"
version = "0.1.0"
description = "Parser and validator for AGENTS.md — a machine-readable file for websites to declare AI agent interaction policies."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MuVeraAI Corporation", email = "opensource@muveraai.com" },
]
keywords = ["agents", "ai", "ai-agents", "agents-md", "policy", "robots-txt", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
fetcher = ["aiohttp>=3.9.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "aiohttp>=3.9.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/aumos-ai/agents-md-spec"
Repository = "https://github.com/aumos-ai/agents-md-spec"
Documentation = "https://github.com/aumos-ai/agents-md-spec/tree/main/docs"
"Bug Tracker" = "https://github.com/aumos-ai/agents-md-spec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.coverage.run]
source = ["src/agents_md"]
omit = ["src/agents_md/py.typed"]

[tool.coverage.report]
fail_under = 80
show_missing = true
